Refatora o DTO de User em UserRequestDTO e UserResponseDTO